--- a/package.json
+++ b/package.json
@@ -5,13 +5,25 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest --testTimeout=15000 --detectOpenHandles --watchAll --verbose"
   },
   "repository": {
     "type": "git",
     "url": "git@gitlab.lnu.se:1dv610/student/ag223vg/l1.git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jest": "^27.2.1"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
+  },
+  "dependencies": {
+    "cross-env": "^7.0.3"
+  }
 }
