--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "l1",
-  "version": "1.0.0",
+  "name": "angelicagrass-tokenizer",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "type": "module",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@gitlab.lnu.se:1dv610/student/ag223vg/l1.git"
+    "url": "git+https://github.com/angelicagrass/tokenizer-L1"
   },
   "author": "",
   "license": "ISC",
